[package]
name = "burstkit-rs"
version = "0.1.0"
authors = ["damccull <damccull@gmail.com>"]
edition = "2018"
license = "Unlicense"
description = "A library to make working with Burstcoin and its APIs easier"
readme = "README.md"
repository = "https://github.com/damccull/burstkit-rs"
keywords = ["burstcoin", "cryptocurrency", "blockchain"]


# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
thiserror = "1.0"
